// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabGroup should disable animations 1`] = `
<div
  class="css-1qg34nh-tab-group denali-tab-group"
  data-testid="tabgroup"
>
  <div
    class="css-6swi8d-tab-group-tab denali-tab active"
    data-active="true"
  >
    Tab A
  </div>
  <div
    class="css-6swi8d-tab-group-tab denali-tab"
    data-active="false"
    id="tab-b"
  >
    <div>
      Extra long Tab B
    </div>
  </div>
  <div
    class="css-119aznj-tab-group-tab denali-tab"
    data-active="false"
    id="tab-c"
  >
    <div>
      Tab C
    </div>
  </div>
</div>
`;

exports[`TabGroup should render primary tabs 1`] = `
<div
  class="css-1qg34nh-tab-group denali-tab-group"
  data-testid="tabgroup"
>
  <div
    class="css-gv1ey9-tab-group-tab denali-tab active"
    data-active="true"
  >
    Tab A
  </div>
  <div
    class="css-gv1ey9-tab-group-tab denali-tab"
    data-active="false"
    id="tab-b"
  >
    <div>
      Extra long Tab B
    </div>
  </div>
  <div
    class="css-y766um-tab-group-tab denali-tab"
    data-active="false"
    id="tab-c"
  >
    <div>
      Tab C
    </div>
  </div>
</div>
`;

exports[`TabGroup should render secondary tabs 1`] = `
<div
  class="css-ctjcs1-tab-group denali-tab-group"
  data-testid="tabgroup"
>
  <div
    class="css-1v3ui5q-tab-group-tab denali-tab active"
    data-active="true"
  >
    Tab A
  </div>
  <div
    class="css-1v3ui5q-tab-group-tab denali-tab"
    data-active="false"
    id="tab-b"
  >
    <div>
      Extra long Tab B
    </div>
  </div>
  <div
    class="css-1rsgl0u-tab-group-tab denali-tab"
    data-active="false"
    id="tab-c"
  >
    <div>
      Tab C
    </div>
  </div>
</div>
`;

exports[`TabGroup should render vertical tabs 1`] = `
<div
  class="css-1qg34nh-tab-group denali-tab-group vertical"
  data-testid="tabgroup"
>
  <div
    class="css-gv1ey9-tab-group-tab denali-tab active vertical"
    data-active="true"
  >
    Tab A
  </div>
  <div
    class="css-gv1ey9-tab-group-tab denali-tab vertical"
    data-active="false"
    id="tab-b"
  >
    <div>
      Extra long Tab B
    </div>
  </div>
  <div
    class="css-y766um-tab-group-tab denali-tab vertical"
    data-active="false"
    id="tab-c"
  >
    <div>
      Tab C
    </div>
  </div>
</div>
`;
